--- a/Task_1.ipynb
+++ b/Task_1.ipynb
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
        "False"
       ]
      },
-     "execution_count": 248,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
        "True"
       ]
      },
-     "execution_count": 301,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
        "False"
       ]
      },
-     "execution_count": 302,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,27 @@
        "'4.0'"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calc('2 * (15 - 3 * 4) - 2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'4.0'"
+      ]
+     },
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -693,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 55,
    "metadata": {
     "scrolled": true
    },
@@ -704,7 +724,7 @@
        "('124.0', 124)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,6 +732,13 @@
    "source": [
     "calc('2 * ((15 * 4 + 2) + 1) - 2'), eval('2 * ((15 * 4 + 2) + 1) - 2')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
