--- a/Task_1.ipynb
+++ b/Task_1.ipynb
@@ -109,125 +109,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.16666666666666666"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f = lambda x, y: x / y\n",
-    "foldl2(f, 1, [1, 2, 3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "b = lambda x: x\n",
     "def foldr2(f, x0, lst):\n",
-    "    def foo(lst, acc):\n",
+    "    def foo(acc, lst):\n",
     "        def fNew(n):\n",
     "            return acc(f(lst, n))\n",
     "        return fNew\n",
-    "    return foldr(foo, b, lst)(x0)"
+    "    return foldl(foo, b, lst)(x0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.5"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f = lambda x, y: x / y\n",
-    "foldr2(f, 1, [1, 2, 3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ident = lambda x:x\n",
-    "def foldl(f, x0, lst):\n",
-    "    if not lst:\n",
-    "        return x0\n",
-    "    return foldl(f, f(x0, lst[0]), lst[1:])\n",
-    "\n",
-    "\n",
-    "def foldr(f, x0, lst):\n",
-    "    if not lst:\n",
-    "        return x0\n",
-    "    return f(lst[0], foldr(f, x0, lst[1:]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#сумма\n",
-    "foldl(lambda x, y: x + y, 0, [1, 2, 3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'123'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#конкатенация\n",
-    "foldl(lambda x, y: '{}{}'.format(x, y), '', [1, 2, 3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +133,7 @@
        "(0.16666666666666666, 1.5)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,6 +142,28 @@
     "f = lambda x, y: x / y\n",
     "foldl(f, 1, [1, 2, 3]), \\\n",
     "foldr(f, 1, [1, 2, 3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.16666666666666666, 1.5)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = lambda x, y: x / y\n",
+    "foldl2(f, 1, [1, 2, 3]), \\\n",
+    "foldr2(f, 1, [1, 2, 3])"
    ]
   },
   {
