--- a/Task_1.ipynb
+++ b/Task_1.ipynb
@@ -190,19 +190,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from collections import Counter\n",
+    "\n",
     "def check_inv(a, b):\n",
-    "    a = ''.join(sorted(a))\n",
-    "    b = ''.join(sorted(b))\n",
-    "    return True if b in a else False"
+    "    if (len(a) >= len(b)):\n",
+    "        bCounted = Counter(b)\n",
+    "        for i in range(len(a)-len(b)+1):\n",
+    "            if Counter(a[i:i+len(b)]) == bCounted:\n",
+    "                return True\n",
+    "    return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +216,7 @@
        "False"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +236,7 @@
        "True"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -251,13 +256,53 @@
        "False"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "check_inv('abcrotm', 'abcrotmqwe')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "check_inv('abcrotm', 'cbaortm')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "check_inv('abrcotm', 'tro')"
    ]
   },
   {
